--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PhotoExplorer</string>
+    <string name="photographer">Photographer</string>
+    <string name="location">Location</string>
+    <string name="title">Title</string>
 </resources>
